--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,13 +4,16 @@
   color : lightgray;
   margin:0;
   padding: 0;
+  font-weight: 800;
 }
+
 .title {
   margin: 0;
   padding: 0;
   color: red;
   padding-top: 1em;
 }
+
 /* HEADER */
 
 .header-container {
@@ -30,13 +33,14 @@
 .nav-links {
   list-style: none;
   display: flex;
-  justify-content: space-around;
   margin: 0;
   padding: 0;
 }
 
 .nav-links:first-child {
-  width: 100%;
+  width: 90%;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 
 li {
@@ -44,7 +48,7 @@ li {
   width: 60%;
 }
 
-a {
+ul li:nth-child(-n + 2) {
   text-decoration: none;
   background: #202020;
   color:#C0C0C0;
@@ -52,7 +56,12 @@ a {
   border-radius: 15px;
 }
 
-/* LATEST MOVIES */
+a {
+  text-decoration: none;
+  color:#C0C0C0;
+}
+
+/* LATEST MOVIES COMPONENT */
 
 .movies-container {
   display: flex;
@@ -78,17 +87,20 @@ a {
 .movie-title {
   padding:0 .5em;
   border-radius: 0 0 15px 15px;
-  color:#C0C0C0
+  color:#C0C0C0;
+  text-align: center;
+
 }
 
 .movie-rating {
   text-align: right;
   margin-left: 60%;
-  padding: .5em;
+  padding: .5em .8em .5em .5em;
   border-radius: 50%;
   height: auto;
   width: 20px;
-}
+  position: relative;
+  }
 
 .movie-overview {
   position: absolute;
@@ -110,6 +122,7 @@ a {
 
 .movieList-pagination {
   display: flex;
+  width: 100vw;
   justify-content: space-around;
   padding-bottom: 3em;
 }
@@ -136,3 +149,23 @@ button {
   border: 4px solid green;
 }
 
+#next, #prev {
+  width: 40%;
+  margin-top: 1em;
+}
+
+/* MOVIE COMPONENT */
+
+.movie-card__single {
+  background-color: #303030;
+  width: 100%;
+  border-radius: 15px;
+  margin: 1em 0;
+  text-align: left;
+  position: relative;
+  overflow: h
+}
+
+.movie-poster__single {
+  width: 100vw;
+}
