--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-  background-color:black;
-  color : lightgray;
+  background-color:#C2C2C2;
+  color : whitesmoke;
   margin:0;
   padding: 0;
   font-weight: 800;
@@ -10,8 +10,11 @@
 .title {
   margin: 0;
   padding: 0;
-  color: red;
-  padding-top: 1em;
+  background: #00264B;
+  color: #C2C2C2;
+  padding: 1rem 0;
+  text-align: start;
+  padding-left: 1rem;
 }
 
 /* HEADER */
@@ -26,15 +29,12 @@
 
 /* NAVBAR */
 
-.nav-container {
-  height: 20vh;
-}
-
 .nav-links {
   list-style: none;
   display: flex;
   margin: 0;
   padding: 0;
+  background-color:#C2C2C2;
 }
 
 .nav-links:first-child {
@@ -44,21 +44,21 @@
 }
 
 li {
-  margin: 3em 0;
+  margin: 1em 0;
   width: 30%;
 }
 
 ul li:nth-child(-n + 2) {
   text-decoration: none;
-  background: #202020;
-  color:#C0C0C0;
-  padding: 1em 1.5em;
-  border-radius: 15px;
+  color:#153184;
+  border: 1px solid #153184;
+  padding: .5rem;
+  border-radius: 5px;
 }
 
 a {
   text-decoration: none;
-  color:#C0C0C0;
+  color:#153184;
 }
 
 /* LATESTMOVIES & SEARCH COMPONENT */
@@ -67,16 +67,22 @@ a {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
+  background: #E0E0E0;
 }
 
 .movie-card {
-  background-color: #303030;
+  background-color: #C2C2C2;
+  border: 1px solid #00264B;
   width: 42%;
-  border-radius: 15px;
+  border-radius: 10px;
   margin: 1em 0;
   text-align: left;
   position: relative;
   overflow: hidden;
+}
+
+.movie-card:hover {
+  box-shadow: 4px 4px 15px 4px black;
 }
 
 .movie-poster {
@@ -85,28 +91,30 @@ a {
 }
 
 .movie-title {
-  padding:0 .5em;
+  padding: 1em .5em;
   border-radius: 0 0 15px 15px;
-  color:#C0C0C0;
+  color:#153184;
   text-align: center;
-
+  margin-bottom: 4rem;
 }
 
 .movie-rating {
   text-align: right;
-  margin-left: 60%;
+  margin-left: 65%;
   padding: .5em .8em .5em .5em;
   border-radius: 50%;
   height: auto;
   width: 20px;
-  position: relative;
-  }
+  position: absolute;
+  bottom: 0rem;
+}
 
 .movie-overview {
   position: absolute;
   padding: 0 .5em;
   background-color: white;
-  color:#202020;
+  color:#153184;
+  font-size: 12px;
   transform: translateY(100%);
   bottom: 0;
   left: 0;
@@ -128,25 +136,25 @@ a {
 }
 
 button {
-  background: #202020;
-  color:#C0C0C0;
+  background: #C2C2C2;
+  color:#153184;
   padding: 1em 1.5em;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .red {
   color:red;
-  border: 4px solid red;
+  border: 2px solid red;
 }
 
 .orange {
-  color:orange;
-  border: 4px solid orange;
+  color:#CC5500;
+  border: 2px solid #CC5500;
 }
 
 .green {
   color:green;
-  border: 4px solid green;
+  border: 2px solid green;
 }
 
 #next, #prev {
@@ -156,26 +164,36 @@ button {
   font-weight: 800;
 }
 
+.page-index {
+  padding: 1em .5em;
+  border-radius: 0 0 15px 15px;
+  color: #153184;
+  text-align: center;
+}
+
 /* SEARCH */
 
 form {
+  display: flex;
+  justify-content: center;
   margin-bottom: 4vh;
 }
 
 input[type=text] {
-  border-radius: 15px;
-  padding: .5em;
-  background-color: #303030;
-  color: #C0C0C0;
-  font-size: 18px;
+  width: 80%;
+  border: 1px solid #153184;
+  padding: .5rem;
+  border-radius: 5px;
+  color: #153184;
+  font-size: 16px;
   font-weight: 800;
 }
-
 
 /* MOVIE COMPONENT */
 
 .movie-card__single {
-  background-color: #303030;
+  background-color: #C2C2C2;
+  color: #153184;
   width: 100%;
   border-radius: 15px;
   margin: 1em 0;
@@ -189,10 +207,7 @@ input[type=text] {
 }
 
 @media only screen and (min-width: 481px) and (max-width: 768px) {
-  .movie-card {
-    width: 38%;
-  }
-  .movie-poster {
+ .movie-poster {
     width: 100vw;
   }
 }
@@ -210,11 +225,7 @@ input[type=text] {
     width: 100vw;
   }
   
-  .movie-rating {
-    margin-left: 75%;
-  }
-
-  #next, #prev {
+ #next, #prev {
     width: 30%;
   
     margin-top: 2em;
