--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -91,23 +91,20 @@ a {
 }
 
 .movie-title {
-  padding: 1em .5em;
+  padding: 0 .5em 1em;
   border-radius: 0 0 15px 15px;
   color:#153184;
   text-align: center;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 
 .movie-rating {
-  text-align: right;
-  margin-left: 65%;
-  padding: .5em .8em .5em .5em;
-  border-radius: 50%;
-  height: auto;
-  width: 20px;
+  display: flex;
+  width: 15%;
   position: absolute;
-  bottom: 0rem;
-}
+  right: 0;
+  bottom: 0;
+ }
 
 .movie-overview {
   position: absolute;
@@ -130,9 +127,10 @@ a {
 
 .movieList-pagination {
   display: flex;
-  width: 100vw;
+  align-items: flex-end;
+  width: 90%;
   justify-content: space-around;
-  padding-bottom: 3em;
+  align-items: baseline;
 }
 
 button {
@@ -140,6 +138,15 @@ button {
   color:#153184;
   padding: 1em 1.5em;
   border-radius: 10px;
+  width: 40%;
+}
+
+.red, 
+.orange,
+.green {
+  padding: 0 .2rem;
+  margin-right: 1rem;
+  border-radius: 5px;
 }
 
 .red {
@@ -153,19 +160,18 @@ button {
 }
 
 .green {
-  color:green;
+  color: green;
   border: 2px solid green;
 }
 
 #next, #prev {
-  width: 40%;
   margin-top: 1em;
   font-size: 16px;
   font-weight: 800;
 }
 
 .page-index {
-  padding: 1em .5em;
+  padding: 1em 1.5em;
   border-radius: 0 0 15px 15px;
   color: #153184;
   text-align: center;
@@ -192,27 +198,32 @@ input[type=text] {
 /* MOVIE COMPONENT */
 
 .movie-card__single {
-  background-color: #C2C2C2;
-  color: #153184;
-  width: 100%;
-  border-radius: 15px;
-  margin: 1em 0;
-  text-align: left;
-  position: relative;
-  overflow: h
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  background: #00264B;
+  color: #C2C2C2;
+  
+}
+
+.movie-details {
+  display: flex;
+  flex-flow: column nowrap;
+  text-align: start;
+  margin: 0 2rem;
 }
 
 .movie-poster__single {
-  width: 100vw;
+  width: 40vh;
 }
 
-@media only screen and (min-width: 481px) and (max-width: 768px) {
+@media only screen and (min-width: 481px)  {
  .movie-poster {
     width: 100vw;
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
+@media only screen and (min-width: 768px) {
 
   .App {
     font-size: 20px;
@@ -221,15 +232,27 @@ input[type=text] {
     width: 30%;
   }
 
-  .movie-poster {
-    width: 100vw;
+  h2 {
+    display: none;
+  }
+
+  .movie-card__single {
+    padding: 2rem;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+  }
+
+  .movie-poster__single,
+  .movie-details {
+    max-width: 45%;
+  }
+
+  .movie-details {
+    align-self: flex-start;
   }
   
- #next, #prev {
-    width: 30%;
-  
-    margin-top: 2em;
-    font-size: 23px;
+  .movie-poster {
+    width: 100vw;
   }
 }
 
@@ -244,8 +267,4 @@ input[type=text] {
     .movie-poster {
       width: 100%;
     }
-
-    #next, #prev {
-      font-size: 20px;
-     }
-  }
+}
